fix and create new validations
fix and create new validations for get and post routes. To validate if the user is logged in and put user_id authomaticaly
